# rescue_robots_sim

./: README.md
drones_ros2/src/neo_robots/neo_simulation2/: CMakeLists.txt  setup.py
drones_ros2/src/neo_robots/neo_simulation2/configs/mp_500/: navigation_0.yaml  navigation_1.yaml
drones_ros2/src/neo_robots/neo_simulation2/launch/: multi_robot_navigation.launch.py  multi_robot_navigation_obstacle_avoidance.launch.py  multi_robot_navigation_simple.launch.py  multi_robot_simulation.launch.py  simulation.launch.py
drones_ros2/src/neo_robots/neo_simulation2/launch_orig/: multi_robot_navigation.launch.py  multi_robot_simulation.launch.py
drones_ros2/src/neo_robots/neo_simulation2/neo_simulation2/: control_robot.py  control_robot_avoid.py  control_robot_avoid_sides.py  control_robot_pid.py  control_robot_simple.py
drones_ros2/src/neo_robots/neo_simulation2/robots/mp_400/: mp_400.urdf.xacro
drones_ros2/src/neo_robots/neo_simulation2/robots/mp_500/: mp_500.urdf.xacro
drones_ros2/src/run/: simulation.sh
drones_ros2/src/sjtu_drone/sjtu_drone_bringup/: package.xml
drones_ros2/src/sjtu_drone/sjtu_drone_control/: package.xml  setup.py
drones_ros2/src/spade/agents/: drone_explore.py  rescue copy.py  rescue.py  rescue_agent_1.py  rescue_agent_2.py  rescue_bkp.py  rescue_bkp2.py  start_agents.sh  uav_agent_1.py  uav_agent_2.py  yesy.ipynb
drones_ros2/src/yolobot_recognition/: package.xml  setup.py
spade/: main.py  requirements.txt  test.py
spade/agents/: ReceiverAgent.py  SenderAgent.py
spade/controller/: SpadeApi.py
(+88 files in other folders)
